--- a/frontend/src/components/Home/home.css
+++ b/frontend/src/components/Home/home.css
@@ -5,20 +5,18 @@
   align-items: center;
   gap: 15px;
   width: 100%;
-  margin:40px auto;
+  margin: 40px auto;
 }
-.product{
-    width: 25%;
-    height: 250px;
-    background-color:blanchedalmond;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-
+.product {
+  width: 18%;
+  height: 300px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
 }
-.image{
-    height: 100px;
-    width: 100%;
+.product img {
+  height: 150px;
+  width: 100%;
+  border-radius: 5px 5px 0 0;
 }
-
-
