--- a/frontend/src/components/registration.css
+++ b/frontend/src/components/registration.css
@@ -32,7 +32,7 @@
 
 .signup button {
   border: none;
-  background-color: rgb(36,174,177);
+  background-color: rgb(36, 174, 177);
   padding: 0.5rem 3rem;
   color: white;
   cursor: pointer;
